daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N7_unsorted_roster/auth_block.cbor.hex
a30082a20058400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001584056e91dd6c4c77afed939bd56002525f00e819def6615d1a7079b59df9f24634a61df80aab0a449732249b672c73f7fed65fe83f8fbabe380aeab3e9acd3962eaa200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae30158401faf8845d30622f5031583f15437db5846ae39dadc27579bb06f6c7384b2d71fe08f7d03aba93ed466d1a4af6c1630defc35ee6aeeb5c892001b383fb70d367501f602f6
